# Thermal-UAV

./: .gitignore  pyproject.toml
